--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.2.0",
     "gulp-rename": "^1.2.2",
-    "gulp-minify": "^1.0.0"
+    "gulp-minify": "^1.0.0",
+    "minimatch": ">=3.0.2",
+    "lodash": ">=4.17.5"
   },
   "devDependencies": {
     "gulp": "^3.9.1"
